small fix to scrollbar visibility

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -127,7 +127,7 @@ body{
 
 
 ::-webkit-scrollbar {
-    width: 1em;
+    width: 0;
   }
   
   /* Track */
